...
//

import SwiftUI

enum Tab: String, CaseIterable {
    case home = "Home"
    case inbox = "Inbox"
    case transactions = "Transactions"
    case settings = "Settings"
    
    var icon: String {
        switch self {
        case .home:
            return "house.fill"
        case .inbox:
...
