...
                            .font(.caption)
                    }
                }
                .padding()
                .background(Color(.systemBackground))
            }
            .navigationTitle("Console")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    ShareLink(item: logger.getLogsAsString()) {
                        Image(systemName: "square.and.arrow.up")
                    }
...
